<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/Login_Background"
    tools:context="edu.ucsb.cs.cs185.istudy.MainActivity$PlaceholderFragment" >

    <ListView
        android:id="@+id/loginlist"
        android:layout_width="match_parent"
        android:layout_height="393dp"
        android:layout_above="@+id/buttonRefresh"
        android:layout_alignParentTop="true" >

    </ListView>

    <ImageView
        android:id="@+id/iStudy_icon"
        android:contentDescription="@string/default_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/istudy2" />

    <EditText
        android:id="@+id/login_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iStudy_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:hint="@string/Username"
        android:background="@color/White"
        android:ems="14"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_username"
        android:layout_below="@+id/login_username"
        android:layout_marginTop="20dp"
        android:background="@color/White"
        android:ems="14"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <TextView
        android:id="@+id/login_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_signinbutton"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:text="@string/no_acct"
        android:textColor="@color/White" />

    <Button
        android:id="@+id/login_signinbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_alignLeft="@+id/login_password"
        android:layout_alignRight="@+id/login_password"
        android:layout_below="@+id/login_password"
        android:layout_marginTop="20dp"
        android:background="@color/iStudy_Theme"
        android:text="@string/Sign_In" />

    <TextView
        android:id="@+id/login_signinlink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_signup"
        android:layout_alignTop="@+id/login_signup"
        android:layout_marginTop="20dp"
        android:text="@string/signup_link"
        android:textColor="@color/link" />

</RelativeLayout>
